<resources>
    <string name="app_name">YogaApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_api">ApiActivity</string>

    <string name="enter_username">Введите имя пользователя</string>
    <string name="sign_in">Войти</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="asanas">Асаны</string>
    <string name="personal_programm">Личная программа</string>
    <string name="user_info">Аккаунт</string>
    <string name="about">О приложении</string>
    <string name="additional_info">Доп.инфо</string>
</resources>
