<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/asanas"
            android:checked="false"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/asanas" />

        <item
            android:id="@+id/personal_programm"
            android:checked="false"
            android:icon="@drawable/ic_star_black"
            android:title="@string/personal_programm" />

        <item
            android:id="@+id/user_info"
            android:checked="false"
            android:icon="@drawable/ic_send_black"
            android:title="@string/user_info"/>

        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/about" />


        <item
            android:id="@+id/additional_info"
            android:checked="false"
            android:icon="@drawable/ic_email_black"
            android:title="@string/additional_info" />
          </group>
</menu>